# harvey

./: .gitignore  .pre-commit-config.yaml  Dockerfile.docs  Makefile  README.md  custom.css  environment.yml  pyproject.toml  requirements.txt  verification.ipynb
.github/workflows/: build.yml  deploy.yml  docs.yml
doc/: Doxyfile  TODO.md  customdoxygen.css
doc/markdown/: testreport.md
doc/markdown/theory/: analsols.md  basictheory.md  diff.md  references.md
doc/markdown/userguide/: userguide.md  userinput.md
qa/: README.md  hvy_qa_test.rst  test_problems.csv
qa/hvy_qa_test/: qa_utils.py  test1.py  test10.py  test10_in.py  test11.py  test11_in.py  test12.py  test12_in.py  test13.py  test13_in.py  test14.py  test14_in.py  test15.py  test15_in.py  test16.py  test16_in.py  test17.py  test17_in.py  test18.py  test18_in.py  test1_in.py  test2.py  test2_in.py  test3.py  test3_in.py  test4.py  test4_in.py  test5.py  test5_in.py  test6.py  test6_in.py  test7.py  test7_in.py  test8.py  test8_in.py  test9.py  test9_in.py  test_reset.py
src/: .gitignore  Gsselm.f90  Makefile  harvey.f90  harvey.kgo  harvey.py  harvin.py  hvy_assemble_coeffs.f90  hvy_assemble_rhs.f90  hvy_bcons.py  hvy_calc_alpha.f90  hvy_calc_source_terms.f90  hvy_global_bcon_data.py  hvy_global_kindtypes.f90  hvy_global_mat_data.py  hvy_global_mesh_data.py  hvy_global_phys_data.py  hvy_global_reg_data.py  hvy_global_time_data.py  hvy_mats.py  hvy_mesh.py  hvy_print_mesh.f90  hvy_regs.py  hvy_setup_mesh.f90  hvy_user_input.py  prospector_profile.yaml  test1_in.py  tridag_ser.f90
src/Doc/: Doxyfile
(+4 files in other folders)
