[project]
name = "harvey"
version = "0.1.0"
description = "A simple 1D diffusion solver with analytic test cases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docutils>=0.22.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "robotframework>=7.4.1",
    "scipy>=1.17.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
